Make sure dark mode doesn't affect printing

--- a/assets/css/_properties.scss
+++ b/assets/css/_properties.scss
@@ -24,8 +24,10 @@ html.light {
   @include light-properties;
 }
 
-html.dark {
-  @include dark-properties;
+@media screen {
+  html.dark {
+    @include dark-properties;
+  }
 }
 
 @media screen and (prefers-color-scheme: dark) {
